--- a/public/index.html
+++ b/public/index.html
@@ -3016,6 +3016,7 @@
                                 <h4 data-i18n="Claude Model">Claude Model</h4>
                                 <select id="model_claude_select">
                                     <optgroup label="Versions">
+                                        <option value="claude-sonnet-4-5">claude-sonnet-4-5</option>
                                         <option value="claude-opus-4-1">claude-opus-4-1</option>
                                         <option value="claude-opus-4-1-20250805">claude-opus-4-1-20250805</option>
                                         <option value="claude-opus-4-0">claude-opus-4-0</option>
