--- a/public/index.html
+++ b/public/index.html
@@ -5351,6 +5351,9 @@
                 <form id="form_bg_upload" style="display: none;">
                     <input type="file" id="add_bg_button" name="avatar" accept="image/jpeg,image/png,image/gif,image/bmp,image/svg+xml,video/*">
                 </form>
+                <button id="bg-scroll-top" type="button" class="menu_button menu_button_icon" title="Scroll backgrounds to top" data-i18n="[title]Scroll backgrounds to top">
+                    <i class="fa-solid fa-chevron-up" aria-hidden="true"></i>
+                </button>
             </div>
         </div>
         <div id="extensions-settings-button" class="drawer">
