Persona description editor expand (#4591)
* Enhance persona description section with expandable editor icon

* Fix selector for persona description update to use data attribute

--- a/public/index.html
+++ b/public/index.html
@@ -5511,7 +5511,10 @@
                                     </div>
                                 </div>
 
-                                <h4 data-i18n="Persona Description">Persona Description</h4>
+                                <h4 class="flex-container alignItemsBaseline">
+                                    <span data-i18n="Persona Description">Persona Description</span>
+                                    <i class="editor_maximize fa-solid fa-maximize right_menu_button" data-for="persona_description" title="Expand the editor" data-i18n="[title]Expand the editor"></i>
+                                </h4>
                                 <textarea id="persona_description" name="persona_description" data-i18n="[placeholder]Example: [{{user}} is a 28-year-old Romanian cat girl.]" placeholder="Example:&#10;[{{user}} is a 28-year-old Romanian cat girl.]" class="text_pole textarea_compact" value="" autocomplete="off" rows="8"></textarea>
 
                                 <div class="flex-container justifySpaceBetween">
