--- a/public/scripts/extensions/regex/scriptTemplate.html
+++ b/public/scripts/extensions/regex/scriptTemplate.html
@@ -12,10 +12,10 @@
             <i class="fa-solid fa-pencil"></i>
         </div>
         <div class="move_to_global menu_button" data-i18n="[title]ext_regex_move_to_global" title="Move to global scripts">
-            <i class="fa-solid fa-arrow-up"></i>
+            <i class="fa-solid fa-globe"></i>
         </div>
         <div class="move_to_scoped menu_button" data-i18n="[title]ext_regex_move_to_scoped" title="Move to scoped scripts">
-            <i class="fa-solid fa-arrow-down"></i>
+            <i class="fa-solid fa-address-card"></i>
         </div>
         <div class="export_regex menu_button" data-i18n="[title]ext_regex_export_script" title="Export script">
             <i class="fa-solid fa-file-export"></i>
