--- a/public/scripts/extensions/vectors/settings.html
+++ b/public/scripts/extensions/vectors/settings.html
@@ -140,6 +140,7 @@
                     <option value="gemini-embedding-001">gemini-embedding-001</option>
                     <option value="gemini-embedding-exp-03-07">gemini-embedding-exp-03-07</option>
                     <option value="text-embedding-004">text-embedding-004</option>
+                    <option value="text-embedding-005">text-embedding-005</option>
                     <option value="embedding-001">embedding-001</option>
                 </select>
             </div>
