--- a/public/index.html
+++ b/public/index.html
@@ -3017,6 +3017,9 @@
                                 <select id="model_claude_select">
                                     <optgroup label="Versions">
                                         <option value="claude-sonnet-4-5">claude-sonnet-4-5</option>
+                                        <option value="claude-sonnet-4-5-20250929">claude-sonnet-4-5-20250929</option>
+                                        <option value="claude-haiku-4-5">claude-haiku-4-5</option>
+                                        <option value="claude-haiku-4-5-20251001">claude-haiku-4-5-20251001</option>
                                         <option value="claude-opus-4-1">claude-opus-4-1</option>
                                         <option value="claude-opus-4-1-20250805">claude-opus-4-1-20250805</option>
                                         <option value="claude-opus-4-0">claude-opus-4-0</option>
