--- a/public/scripts/extensions/caption/settings.html
+++ b/public/scripts/extensions/caption/settings.html
@@ -82,6 +82,9 @@
                         <option data-type="openai" value="gpt-4.5-preview">gpt-4.5-preview</option>
                         <option data-type="openai" value="gpt-4.5-preview-2025-02-27">gpt-4.5-preview-2025-02-27</option>
                         <option data-type="anthropic" value="claude-sonnet-4-5">claude-sonnet-4-5</option>
+                        <option data-type="anthropic" value="claude-sonnet-4-5-20250929">claude-sonnet-4-5-20250929</option>
+                        <option data-type="anthropic" value="claude-haiku-4-5">claude-haiku-4-5</option>
+                        <option data-type="anthropic" value="claude-haiku-4-5-20251001">claude-haiku-4-5-20251001</option>
                         <option data-type="anthropic" value="claude-opus-4-1">claude-opus-4-1</option>
                         <option data-type="anthropic" value="claude-opus-4-1-20250805">claude-opus-4-1-20250805</option>
                         <option data-type="anthropic" value="claude-opus-4-0">claude-opus-4-0</option>
